# babylon-hackathon

./: .gitignore  Cargo.toml  NOTICE  README.md
.devcontainer/: Dockerfile  Dockerfile.bak  devcontainer.json  setup.sh
.devcontainer/library-scripts/: docker-in-docker-debian.sh
contracts/babylon-vault/src/: contract.rs  msg.rs
contracts/cw-cellar-adaptor/: Cargo.toml
contracts/cw-cellar-adaptor/examples/: schema.rs
contracts/ecosystem-adaptor/: Cargo.toml
interfaces/: Cargo.toml
interfaces/src/: gauge.rs
scripts/git/: pre-commit
scripts/site/: cp_addresses.sh
scripts/smart-contracts/: README.md  babylon_vault.sh  build.sh  code_ids.json  contract_addresses.json  dummy_oracle.sh  ecosystem_adaptor.sh  env_euphrates.sh  final_setup.sh  instantiate.sh  mnemonic.key  mock_gauge.sh  setup.sh  store.sh
site/: package-lock.json  package.json
site/src/: app.css  contract_addresses.json
smart-contracts/: Cargo.toml
smart-contracts/.cargo/: config.toml
smart-contracts/contracts/babylon-vault/: Cargo.toml
smart-contracts/contracts/babylon-vault/src/: contract.rs  error.rs  msg.rs  state.rs
smart-contracts/contracts/babylon-vault/src/tests/: allocations.rs  deposit.rs  helper.rs  instantiate.rs  mod.rs  rebalance.rs  register.rs  setup.rs  withdraw.rs
smart-contracts/contracts/dummy-oracle/: Cargo.toml
smart-contracts/contracts/dummy-oracle/examples/: schema.rs
smart-contracts/contracts/dummy-oracle/schema/: dummy-oracle.json
smart-contracts/contracts/dummy-oracle/schema/raw/: execute.json
smart-contracts/contracts/dummy-oracle/src/: contract.rs  msg.rs
smart-contracts/contracts/ecosystem-adaptor/: Cargo.toml
smart-contracts/contracts/ecosystem-adaptor/examples/: schema.rs
smart-contracts/contracts/ecosystem-adaptor/schema/: ecosystem-adaptor.json
smart-contracts/contracts/ecosystem-adaptor/schema/raw/: execute.json  instantiate.json
smart-contracts/contracts/ecosystem-adaptor/src/: contract.rs  error.rs  lib.rs  msg.rs  polytone_handlers.rs  state.rs
smart-contracts/contracts/ecosystem-adaptor/src/tests/: contract.rs  mod.rs  setup.rs
smart-contracts/contracts/mock-gauge/: Cargo.toml
smart-contracts/contracts/mock-gauge/examples/: schema.rs
smart-contracts/contracts/mock-gauge/schema/: mock-gauge.json
smart-contracts/contracts/mock-gauge/schema/raw/: execute.json  instantiate.json  response_to_get_allocation.json  response_to_get_allocations.json
smart-contracts/contracts/mock-gauge/src/: contract.rs  error.rs  msg.rs  state.rs
smart-contracts/contracts/mock-gauge/src/tests/: allocations.rs  execute.rs  instantiate.rs  mod.rs  setup.rs  weights.rs
src/: contract.rs
(+49 files in other folders)
