[workspace]
resolver = "2"

members = ["contracts/*", "packages/*"]

[workspace.dependencies]
cosmwasm-std = "1.5.4"
mars-owner = "2.0.0"
cosmwasm-schema = "1.5.4"
cw-storage-plus = "1.2.0"
cw2 = "1.1.2"
thiserror = { version = "1.0.56" }
cw20-base = { version = "1.1.2", features = ["library"] }
cw20 = "1.1.2"

quasar = { path = "packages/quasar" }
interfaces = { path = "packages/interfaces" }
ecosystem-adaptor = { path = "contracts/ecosystem-adaptor" }