[package]
authors = ["Quasar"]
edition = "2021"
name = "ecosystem-adaptor"
version = "0.0.1"
readme = ""
repository = "https://github.com/quasar-finance/quasar"
homepage = "https://quasar.fi"
documentation = ""
license = "MPL-2.0"
description = "A vault for babylon lsts"
keywords = ["cosmwasm", "lst", "btc"]

exclude = [
  "ecosystem_adaptor.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
library = []

[dependencies]
cosmwasm-std = { workspace = true, features = ["cosmwasm_1_4"] }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
thiserror = { workspace = true }
cw2 = { workspace = true }
cosmos-sdk-proto = { workspace = true }

[dev-dependencies]
prost = { workspace = true }